--- a/Breshop/Views/Shared/_Layout.cshtml
+++ b/Breshop/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <div class="u-nav-container">
                     <ul class="u-nav u-spacing-2 u-unstyled u-nav-1">
                         <li class="u-nav-item">
-                            <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" asp-controller="Produto" asp-action="Index" style="padding: 10px 20px;">Página Inicial</a>
+                            <a id="pagina-inicial" class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" asp-controller="Produto" asp-action="Index" style="padding: 10px 20px;">Página Inicial</a>
                         </li>
                         <li class="u-nav-item">
                             <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" asp-controller="Produto" asp-action="Ofertas" style="padding: 10px 20px;">Ofertas</a>
