ajustado css nicepage

--- a/Breshop/Views/CadastrarProdutos/Index.cshtml
+++ b/Breshop/Views/CadastrarProdutos/Index.cshtml
@@ -15,7 +15,7 @@
         <input value="@ViewBag.Message" type="hidden" id="mensagem" />
         <h2>Todos os produtos</h2>
         <p>
-            <a asp-action="Criar">Criar Novo</a>
+            <a asp-action="Criar">Adicionar Produto</a>
         </p>
         <div class="u-container-style u-list-item u-repeater-item">
             <label class="control-label">Categoria: </label>
