--- a/Breshop/Views/Usuario/Login.cshtml
+++ b/Breshop/Views/Usuario/Login.cshtml
@@ -13,17 +13,15 @@
                 <input type="password" placeholder="password" />
                 <input type="text" placeholder="email address" />
                 <button>create</button>
-                @*<p class="message">Already registered? <a href="#">Sign In</a></p>*@
             </form>
             <form asp-action="LogarUsuario" class="login-form">
                 <label asp-for="Email" class="control-label">Email: </label>
                 <input asp-for="Email" required class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
-                <label asp-for="Senha" class="control-label">Email: </label>
+                <label asp-for="Senha" class="control-label">Senha: </label>
                 <input asp-for="Senha" required class="form-control" />
                 <span asp-validation-for="Senha" class="text-danger"></span>
                 <button type="submit">login</button>
-                @*<p class="message">Not registered? <a href="#">Create an account</a></p>*@
             </form>
         </div>
     </div>
