Ajustado CSS de paginas

--- a/Breshop/Views/CadastrarProdutos/Criar.cshtml
+++ b/Breshop/Views/CadastrarProdutos/Criar.cshtml
@@ -51,7 +51,7 @@
                     <span asp-validation-for="Marca" class="text-danger"></span>
                 </div>
                 <div class="u-container-style u-list-item u-repeater-item">
-                    <input asp-for="Imagem" type="file" class="form-control" />
+                    <input asp-for="Imagem" type="file" class="btn-default"/>
                     <span asp-validation-for="Imagem" class="text-danger"></span>
                 </div>
                 <div class="u-container-style u-list-item u-repeater-item">
@@ -59,7 +59,7 @@
                 </div>
                 <div class="u-container-style u-list-item u-repeater-item">
                     <input type="submit" value="Criar" class="btn btn-default" />
-                    <a asp-action="Index"><input type="button" value="Voltar" /></a>
+                    <a asp-action="Index"><input class="btn-default" type="button" value="Voltar" /></a>
                 </div>
             </form>
         </div>
