--- a/Breshop/wwwroot/css/Modal.css
+++ b/Breshop/wwwroot/css/Modal.css
@@ -1,29 +1,8 @@
 /*Alterações BRESHOP*/
 
+.footer{
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
 /*********************** BOOTSTRAP ***********************************/
 .modal-open .modal {
     overflow-x: hidden;
