--- a/Breshop/wwwroot/css/CriarProduto.css
+++ b/Breshop/wwwroot/css/CriarProduto.css
@@ -2,8 +2,9 @@
 
 .grid-criar-produto {
     white-space: break-spaces;
-    margin-left: 30%;
+    margin-left: 40%;
     width: 100%;
+    align-items: center;
 }
 
 .tabela-produtos{
@@ -18,234 +19,74 @@
     border-radius: 8px;
     color: white;
 }
-/*e09248**/
-/*eaaa60*/
 
-
-
-
-
-
-
-
-
-
-
-
-
-/*********************** BOOTSTRAP ***********************************/
-.u-section-1 .u-sheet-1 {
-    min-height: 667px;
+#produtos-listados a {
+    background: #5b1f00;
+    padding: 2px 6px;
+    border-radius: 8px;
+    color: white;
 }
 
-.u-section-1 .u-text-1 {
-  font-weight: 700;
-  font-size: 1.875rem;
-  margin: 60px auto 0;
+.control-label {
+    width: 5%;
 }
 
-.u-section-1 .u-line-1 {
-  width: 100px;
-  height: 3px;
-  margin: 30px auto 0 520px;
+.form-control {
+    width: 12%;
 }
 
-.u-section-1 .u-list-1 {
-  height: auto;
-  margin: 30px auto 60px 0;
+#Categoria {
+    width: 12%;
 }
 
-.u-section-1 .u-repeater-1 {
-  grid-template-columns: calc(25% - 7.5px) calc(25% - 7.5px) calc(25% - 7.5px) calc(25% - 7.5px);
-  grid-gap: 10px 10px;
-  min-height: 375px;
+#atualizar-imagem {
+    width: 18%;
 }
 
-.u-section-1 .u-container-layout-1 {
-  padding: 4px 10px;
+.img-produto {
+    width: 12%;
 }
 
-.u-section-1 .u-image-1 {
-  height: 275px;
-  margin: 6px auto 0 0;
+#Categoria-label {
+    width: 50%;
 }
 
-.u-section-1 .u-text-2 {
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-top: 20px;
+.titulo-produtos {
+    border: 0.5px solid black;
+    margin-right: 5%;
+    width: 18%;
 }
 
-.u-section-1 .u-text-3 {
-  font-weight: 700;
-  margin: 6px auto 0 3px;
+.btn-default {
+    background: #5b1f00;
+    padding: 10px 20px;
+    border-radius: 8px;
+    color: white;
 }
 
-.u-section-1 .u-btn-1 {
-  border-style: none;
-  font-size: 0.9375rem;
-  margin: -42px 4px 0 auto;
-  padding: 0;
+#produtos-listados td {
+    border-bottom: 0.5px solid black;
 }
 
-.u-section-1 .u-icon-1 {
-  font-size: 1.6em;
+.footer {
+    width: 100%;
+    height: 50px;
+    margin: auto;
+    bottom: 0;
 }
 
-.u-section-1 .u-container-layout-2 {
-  padding: 4px 10px;
-}
 
-.u-section-1 .u-image-2 {
-  height: 275px;
-  margin: 6px auto 0 0;
-}
 
-.u-section-1 .u-text-4 {
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-top: 20px;
-}
 
-.u-section-1 .u-text-5 {
-  font-weight: 700;
-  margin: 6px auto 0 3px;
-}
 
-.u-section-1 .u-btn-2 {
-  border-style: none;
-  font-size: 0.9375rem;
-  margin: -42px 4px 0 auto;
-  padding: 0;
-}
 
-.u-section-1 .u-icon-2 {
-  font-size: 1.6em;
-}
 
-.u-section-1 .u-container-layout-3 {
-  padding: 4px 10px;
-}
 
-.u-section-1 .u-image-3 {
-  height: 275px;
-  margin: 6px auto 0 0;
-}
 
-.u-section-1 .u-text-6 {
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-top: 20px;
-}
 
-.u-section-1 .u-text-7 {
-  font-weight: 700;
-  margin: 6px auto 0 3px;
-}
-
-.u-section-1 .u-btn-3 {
-  border-style: none;
-  font-size: 0.9375rem;
-  margin: -42px 4px 0 auto;
-  padding: 0;
-}
-
-.u-section-1 .u-icon-3 {
-  font-size: 1.4667em;
-}
-
-.u-section-1 .u-container-layout-4 {
-  padding: 4px 10px;
-}
-
-.u-section-1 .u-image-4 {
-  height: 275px;
-  margin: 6px auto 0 0;
-}
-
-.u-section-1 .u-text-8 {
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-top: 20px;
-}
-
-.u-section-1 .u-text-9 {
-  font-weight: 700;
-  margin: 6px auto 0 3px;
-}
-
-.u-section-1 .u-btn-4 {
-  border-style: none;
-  font-size: 0.9375rem;
-  margin: -42px 4px 0 auto;
-  padding: 0;
-}
-
-.u-section-1 .u-icon-4 {
-  font-size: 1.6em;
-}
-
-@media (max-width: 1199px) {
-  .u-section-1 .u-list-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-image-1 {
-    height: 223px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-image-2 {
-    height: 223px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-top: -30px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-image-3 {
-    height: 223px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-text-6 {
-    margin-top: -30px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-image-4 {
-    height: 223px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-text-8 {
-    margin-top: -30px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-right: 0;
-  }
-}
 
 @media (max-width: 991px) {
-  .u-section-1 .u-repeater-1 {
+    .u-section-1 .u-repeater-1 {
     grid-template-columns: calc(50% - 5px) calc(50% - 5px);
   }
 
