--- a/Breshop/Views/CadastrarProdutos/Criar.cshtml
+++ b/Breshop/Views/CadastrarProdutos/Criar.cshtml
@@ -26,8 +26,7 @@
                         <option value="Feminino">Feminino</option>
                         <option value="Ofertas">Ofertas</option>
                         <option value="Masculino">Masculino</option>
-                        <option value="Infantil">Infantil</option>
-                        <option value="Relogios">Relógios</option>
+                        <option value="Acessorio">Acessorio</option>
                     </select>
                 </div>
                 <div class="u-container-style u-list-item u-repeater-item">
