--- a/Breshop/Views/Produto/Index.cshtml
+++ b/Breshop/Views/Produto/Index.cshtml
@@ -21,7 +21,7 @@
                     {
                         <div class="u-active u-carousel-item u-gallery-item u-carousel-item-1">
                             <div class="u-back-slide">
-                                <img class="u-back-image u-expanded" src="@Model.Where(x => x.Categoria == "Masculino").Select(x => x.UrlImagem).FirstOrDefault()">
+                                <img class="" style="width:400px; height: 400px" src="@Model.Where(x => x.Categoria == "Ofertas").Select(x => x.UrlImagem).FirstOrDefault()">
                             </div>
                             <div class="u-over-slide u-over-slide-1">
                                 <h3 class="u-gallery-heading"></h3>
@@ -30,7 +30,7 @@
                         </div>
                         <div class="u-carousel-item u-gallery-item u-carousel-item-2">
                             <div class="u-back-slide">
-                                <img class="u-back-image u-expanded" src="@Model.Where(x => x.Categoria == "Masculino").Select(x => x.UrlImagem).LastOrDefault()">
+                                <img class="" style="width:400px; height: 400px" src="@Model.Where(x => x.Categoria == "Ofertas").Select(x => x.UrlImagem).LastOrDefault()">
                             </div>
                             <div class="u-over-slide u-over-slide-2">
                                 <h3 class="u-gallery-heading"></h3>
@@ -60,26 +60,18 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             </div>
         </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-3" id="carousel_92a9" style="margin-left: 7%; margin-right: 7%;">
-        <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <h2 class="u-custom-font u-text u-text-palette-1-base u-text-1">Outras ofertas</h2>
+    <section class="" style="margin-left: 7%; margin-right: 7%;">
+        <h2 class="outras-ofertas">Outras ofertas</h2>
+        <div class="lista-produtos">
             @if (Model != null)
             {
                 @foreach (var item in Model)
                 {
-                    <div class="u-expanded-width u-list u-list-1">
-                        <div class="u-repeater u-repeater-1">
-                            <div class="u-container-style u-list-item u-palette-2-light-3 u-repeater-item u-video-cover u-list-item-1">
-                                <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
-                                    <img alt="" class="u-expanded-width u-image u-image-default u-image-1" src="@item.UrlImagem">
-                                    <div class="u-align-center u-container-style u-expanded-width u-group u-group-1">
-                                        <div class="u-container-layout u-valign-top u-container-layout-2">
-                                            <h4 class="u-custom-font u-font-oswald u-text u-text-2">@item.Descricao</h4>
-                                            <h6 class="u-text u-text-3">@item.Preco</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="grid-produtos">
+                        <img alt="" class="imagem-produtos" src="@item.UrlImagem">
+                        <div class="u-container-layout u-valign-top u-container-layout-2">
+                            <h4 class="">@item.Descricao</h4>
+                            <h6 class="">@item.Preco</h6>
                         </div>
                     </div>
                 }
