--- a/Breshop/Views/Shared/_Layout.cshtml
+++ b/Breshop/Views/Shared/_Layout.cshtml
@@ -28,9 +28,6 @@
                             <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" asp-controller="Produto" asp-action="Index" style="padding: 10px 20px;">Página Inicial</a>
                         </li>
                         <li class="u-nav-item">
-                            <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" asp-controller="Produto" asp-action="Ofertas" style="padding: 10px 20px;">Ofertas</a>
-                        </li>
-                        <li class="u-nav-item">
                             <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" asp-controller="Produto" asp-action="Feminino" style="padding: 10px 20px;">Feminino</a>
                         </li>
                         <li class="u-nav-item">
@@ -40,10 +37,7 @@
                             <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" asp-controller="Produto" asp-action="Calcado" style="padding: 10px 20px;">Calçados</a>
                         </li>
                         <li class="u-nav-item">
-                            <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" asp-controller="Produto" asp-action="Infantil" style="padding: 10px 20px;">Infantil</a>
-                        </li>
-                        <li class="u-nav-item">
-                            <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" asp-controller="Produto" asp-action="Relogio" style="padding: 10px 20px;">Relógios</a>
+                            <a class="u-active-palette-1-base u-border-active-palette-1-base u-border-hover-palette-1-light-1 u-border-no-left u-border-no-right u-border-no-top u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" asp-controller="Produto" asp-action="Acessorio" style="padding: 10px 20px;">Acessórios</a>
                         </li>
                     </ul>
                 </div>
@@ -56,9 +50,6 @@
                                     <a class="u-button-style u-nav-link" asp-controller="Produto" asp-action="Index" style="padding: 10px 20px;">Página Inicial</a>
                                 </li>
                                 <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" asp-controller="Produto" asp-action="Ofertas" style="padding: 10px 20px;">Ofertas</a>
-                                </li>
-                                <li class="u-nav-item">
                                     <a class="u-button-style u-nav-link" asp-controller="Produto" asp-action="Feminino" style="padding: 10px 20px;">Feminino</a>
                                 </li>
                                 <li class="u-nav-item">
@@ -68,10 +59,7 @@
                                     <a class="u-button-style u-nav-link" asp-controller="Produto" asp-action="Calcado" style="padding: 10px 20px;">Calçados</a>
                                 </li>
                                 <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" asp-controller="Produto" asp-action="Infantil" style="padding: 10px 20px;">Infantil</a>
-                                </li>
-                                <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" asp-controller="Produto" asp-action="Relogio" style="padding: 10px 20px;">Relógios</a>
+                                    <a class="u-button-style u-nav-link" asp-controller="Produto" asp-action="Acessorio" style="padding: 10px 20px;">Relógios</a>
                                 </li>
                             </ul>
                         </div>
@@ -86,6 +74,9 @@
         @RenderBody()
         <hr />
     </div>
+    <footer class="footer">
+        <p>rodapé</p>
+    </footer>
     <!-- Modal -->
     <!--Modal: modalPush-->
     <div class="modal fade" id="modalPush" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -106,15 +97,12 @@
 
                 <!--Footer-->
                 <div class="modal-footer flex-center">
-                    <a type="button" class="btn btn-outline-info waves-effect" data-dismiss="modal" onclick="FecharModal()">Ok</a>
+                    <a type="button" class="btn btn-outline-info waves-effect" id="btn-modal" data-dismiss="modal" onclick="FecharModal()">Ok</a>
                 </div>
             </div>
             <!--/.Content-->
         </div>
     </div>
     <!--Modal: modalPush-->
-    <footer>
-        <p>rodapé</p>
-    </footer>
 </body>
 </html>
