--- a/Breshop/wwwroot/css/CriarProduto.css
+++ b/Breshop/wwwroot/css/CriarProduto.css
@@ -13,15 +13,16 @@
   align-items: center;
 }
 
-.tabela-produtos p a{
-    background: #5b1f00;
-    padding: 10px 20px;
-    border-radius: 8px;
-    color: white;
-}
+    .tabela-produtos p a {
+        background: #e09248;
+        padding: 10px 20px;
+        border-radius: 8px;
+        color: white;
+    }
+
 
 #produtos-listados a {
-    background: #5b1f00;
+    background: #e09248;
     padding: 2px 6px;
     border-radius: 8px;
     color: white;
@@ -33,6 +34,10 @@
 
 .form-control {
     width: 12%;
+}
+
+.form-control-checkbox {
+    width: 1%;
 }
 
 #Categoria {
@@ -47,18 +52,26 @@
     width: 12%;
 }
 
+.todos-produtos {
+    display: flex;
+    position: relative;
+    padding: 1%;
+}
+
 #Categoria-label {
     width: 50%;
+    padding: 1%;
 }
 
 .titulo-produtos {
     border: 0.5px solid black;
     margin-right: 5%;
-    width: 18%;
+    width: 15%;
 }
 
+
 .btn-default {
-    background: #5b1f00;
+    background: #e09248;
     padding: 10px 20px;
     border-radius: 8px;
     color: white;
@@ -66,13 +79,6 @@
 
 #produtos-listados td {
     border-bottom: 0.5px solid black;
-}
-
-.footer {
-    width: 100%;
-    height: 50px;
-    margin: auto;
-    bottom: 0;
 }
 
 
