--- a/Breshop/Views/Login/Index.cshtml
+++ b/Breshop/Views/Login/Index.cshtml
@@ -9,7 +9,7 @@
 <body class="u-body u-xl-mode" data-lang="pt">
     <section>
         <div class="wrapper">
-            <form asp-action="AutenticarUsuario" class="login" method="post" enctype="multipart/form-data">
+            <form class="login">
                 <p class="title">Bem vindo!</p>
                 <input type="text" asp-for="Email"  id="email" required placeholder="Email" autofocus />
                 <i class="fa fa-user"></i>
