--- a/Breshop/Views/Shared/_Layout.cshtml
+++ b/Breshop/Views/Shared/_Layout.cshtml
@@ -3,6 +3,8 @@
 <html style="font-size: 16px;" lang="pt">
 <head>
     <link rel="stylesheet" href="~/css/Modal.css" />
+    <link rel="stylesheet" href="~/css/Home.css" />
+    <link rel="stylesheet" href="~/css/nicepage.css" />
     <script class="u-script" type="text/javascript" src="~/js/Modal.js"></script>
     <script class="u-script" type="text/javascript" src="~/js/jquery.js"></script>
 </head>
@@ -18,7 +20,7 @@
                     {
                         <ul class="lista-icones" id="itens-tela-inicial">
                             <li class="carrinho u-nav-item">
-                                <a asp-controller="CarrinhoProduto" asp-action="Checkout"><img src="~/images/Carrinho/Ícone-Carrinho-de-Compras.png" style="width: 80%;" /></a>
+                                <a asp-controller="CarrinhoProduto" asp-action="Checkout"><img class="carrinho-icone" src="~/images/Carrinho/Ícone-Carrinho-de-Compras.png"/></a>
                             </li>
                             <li class="novo-produto u-nav-item">
                                 <a asp-controller="CadastrarProdutos" asp-action="Index"><img src="~/images/Produto/Icone-novo-produto.png" style="width: 39%;" /></a>
@@ -84,7 +86,7 @@
     <partial name="_CookieConsentPartial" />
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        <hr class="divisao-layout" />
     </div>
     <footer class="footer">
         <p>rodapé</p>
