--- a/Breshop/wwwroot/css/nicepage.css
+++ b/Breshop/wwwroot/css/nicepage.css
@@ -1,4 +1,4 @@
-/*Alterações BRESHOP*/
+/*Alteraï¿½ï¿½es BRESHOP*/
 
 .grid-produto {
     margin-left: 7%;
@@ -37244,7 +37244,6 @@ a.u-link.u-text-hover-grey-90:hover {
         }
         p:not(.u-text-variant)
         {
-        margin-top: 20px;
         margin-bottom: 20px;
         }
         .u-btn
