--- a/Breshop/Views/Shared/_Layout.cshtml
+++ b/Breshop/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     {
                         <ul class="lista-icones" id="itens-tela-inicial">
                             <li class="carrinho u-nav-item">
-                                <a asp-controller="CarrinhoProduto" asp-action="Checkout"><img class="carrinho-icone" src="~/images/Carrinho/Ícone-Carrinho-de-Compras.png"/></a>
+                                <a asp-controller="CarrinhoProduto" asp-action="Checkout" asp-route-item="ViewData["USUARIO"]" ><img class="carrinho-icone" src="~/images/Carrinho/Ícone-Carrinho-de-Compras.png"/></a>
                             </li>
                             <li class="novo-produto u-nav-item">
                                 <a asp-controller="CadastrarProdutos" asp-action="Index"><img src="~/images/Produto/Icone-novo-produto.png" style="width: 39%;" /></a>
